--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-shadow": "^20.6.0",
     "tailwindcss": "^4.1.7",
     "zustand": "^5.0.5"
   },
